refactor : update database column name and update everything